refactor: 쿠폰 전송 조직 id body로 수정